--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Bienvenido a mi página</h1>
-    
+    <p>Este es un párrafo de ejemplo.</p>
+    <footer>2025 Mi Sitio</footer>
 </body>
 </html>
